Обновление Swagger API документации
